--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://the-ai-entrepreneur-ai-hub.github.io/web3-automated-lead-discovery",
   "type": "module",
   "scripts": {
     "dev": "vite",
