--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.5",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "stripe": "^18.3.0"
   },
   "keywords": [],
   "author": "",
