Deploy: Add Heroku configuration for backend deployment
- Added Procfile for Heroku deployment
- Updated server port to use process.env.PORT for Heroku compatibility
- Added engines specification in package.json for Node.js version
- Updated CORS to include Netlify domain
- Added .gitignore for server directory

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,7 +1,10 @@
-node_modules
-# Keep environment variables out of version control
+node_modules/
 .env
-
-/generated/prisma
-
-.env
+*.log
+.DS_Store
+dist/
+build/
+.vscode/
+.idea/
+*.tmp
+*.temp
