--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,11 @@
   "description": "Server for the Web3 Prospector tool.",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "airtable": "^0.12.2",
